--- a/templates/prevision_tag.html
+++ b/templates/prevision_tag.html
@@ -17,12 +17,12 @@
 
 <br>
 <br>
-<label for="Tag(s)">Prévision Groupe: {{Tags}}</label>
+<label for="Tag(s)">Modélisation supervisée: {{Tags}}</label>
 
 <br>
 <br>
 
-<label for="Mots clefs du tag">Mots clefs associées: {{mots_clefs}}</label>
+<label for="Mots clefs du tag">Modélisation non supervisée: {{mots_clefs}}</label>
 
 
 </div>
